k8s/ingress/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitrank-nginx
  namespace: ingress-nginx
spec:
  selector:
    matchLabels:
      app: gitrank-nginx
      component: gitrank-nginx
  replicas: 2
  template:
    metadata:
      labels:
        app: gitrank-nginx
        component: gitrank-nginx
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
