k8s/ingress/service.yml
apiVersion: v1
kind: Service
metadata:
  name: gitrank-nginx
  namespace: ingress-nginx
spec:
  ports:
    - name: gitrank-nginx
      port: 80
      targetPort: 80
  selector:
    app: gitrank-nginx
    component: gitrank-nginx
  type: NodePort
