k8s/ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /api/
        pathType: Prefix
        backend:
          service:
            name: gitrank-backend
            port:
              number: 8080
      - path: /kibana/
        pathType: Prefix
        backend:
          service:
            name: kibana
            port:
              number: 5601
      - path: /grafana/
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 3000
